fixed misaligned nav bar in header

--- a/css/components/_nav-menu.scss
+++ b/css/components/_nav-menu.scss
@@ -10,7 +10,6 @@
 
 /* Dropdown Content (Hidden by Default) */
 .nav__dropdown-container {
-	display: none;
 	position: absolute;
 	background-color: $secondary-color;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
